security-policies/block_use_of_nodeport_services/test-success.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-web-service
spec:
  selector:
    app: my-web-app
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
