security-policies/block_use_of_nodeport_services/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
 name: k8sblocknodeport
spec:
 crd:
  spec:
   names:
    kind: K8sBlockNodePort
 targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
        package k8sblocknodeport 
                                                

        violation[{"msg": msg}] {   
        input.review.kind.kind == "Service"                                                                         
        input.review.object.spec.type == "NodePort"                                         
        msg := "Tenant must be unable to create service of type NodePort"      
        }
